# arcana

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  arcana.docker.toml  docker-compose.yml
.github/workflows/: arcana-sync.yml
config/: arcana.example.toml
crates/arcana-adapters/: Cargo.toml
crates/arcana-adapters/src/: adapter.rs  lib.rs
crates/arcana-adapters/src/dbt/: catalog.rs  manifest.rs  mod.rs  semantic.rs
crates/arcana-adapters/src/snowflake/: client.rs  cost.rs  mod.rs  profiler.rs  schema_sync.rs  usage.rs
crates/arcana-cli/: Cargo.toml
crates/arcana-cli/src/: main.rs  ops.rs
crates/arcana-core/: Cargo.toml
crates/arcana-core/src/: confidence.rs  lib.rs
crates/arcana-core/src/embeddings/: index.rs  local.rs  mod.rs  openai.rs  provider.rs
crates/arcana-core/src/enrichment/: claude.rs  mod.rs
crates/arcana-core/src/entities/: cluster.rs  column.rs  contract.rs  document.rs  evidence.rs  lineage.rs  mod.rs  semantic.rs  table.rs  usage.rs
crates/arcana-core/src/store/: mod.rs  sqlite.rs
crates/arcana-core/src/store/migrations/: 0001_initial.sql  0002_fts.sql  0003_table_clusters.sql  0004_evidence_and_cache.sql
crates/arcana-core/tests/: confidence_tests.rs  store_integration.rs  vector_index_tests.rs
crates/arcana-documents/: Cargo.toml
crates/arcana-documents/src/: chunker.rs  lib.rs  linker.rs  pipeline.rs  source.rs
crates/arcana-documents/src/sources/: markdown.rs  mod.rs
crates/arcana-documents/tests/: documents_tests.rs
crates/arcana-integration-tests/: Cargo.toml
crates/arcana-integration-tests/tests/: mvp_end_to_end.rs
crates/arcana-mcp/: Cargo.toml
crates/arcana-mcp/src/: admin.rs  lib.rs  server.rs  tools.rs
crates/arcana-mcp/tests/: mcp_tools_tests.rs
crates/arcana-recommender/: Cargo.toml
crates/arcana-recommender/src/: dedup.rs  feedback.rs  lib.rs  ranker.rs  serializer.rs
crates/arcana-recommender/tests/: recommender_tests.rs
docs/: ARCHITECTURE.md  DIAGRAM.md  PRODUCTION_IMPROVEMENTS.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/scripts/: api_server.py  extract.py
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Graph.tsx  NodeDetail.tsx  SchemaFilter.tsx  SearchBar.tsx  StatsBar.tsx
frontend/src/hooks/: useGraphData.ts  useSearch.ts
frontend/src/utils/: colors.ts
sandbox/: README.md  setup-gitlab.sh  setup.sh
