[workspace]
members = [
    "crates/arcana-core",
    "crates/arcana-adapters",
    "crates/arcana-documents",
    "crates/arcana-recommender",
    "crates/arcana-mcp",
    "crates/arcana-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "uuid", "chrono", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "=4.5.38", features = ["derive"] }
reqwest = { version = "=0.12.15", features = ["json"] }
config = "0.14"
rmcp = { version = "0.1", features = ["server"] }

