[package]
name = "arcana-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
arcana-core = { path = "../arcana-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
serde_yaml_ng = "0.10"
