[package]
name = "arcana-adapters"
description = "Structured metadata adapters (Snowflake, dbt) for Arcana"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arcana-core = { path = "../arcana-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
serde_yaml_ng = "0.10"

[dev-dependencies]
tempfile = "3"
