[package]
name = "arcana-cli"
description = "CLI binary for Arcana — the agent-first data catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "arcana"
path = "src/main.rs"

[dependencies]
arcana-core = { path = "../arcana-core" }
arcana-adapters = { path = "../arcana-adapters" }
arcana-documents = { path = "../arcana-documents" }
arcana-recommender = { path = "../arcana-recommender" }
arcana-mcp = { path = "../arcana-mcp" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
