[package]
name = "arcana-documents"
description = "Document ingestion pipeline for Arcana"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arcana-core = { path = "../arcana-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
glob = "0.3"

[dev-dependencies]
sqlx = { workspace = true }
