[package]
name = "arcana-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arcana-core = { path = "../arcana-core" }
arcana-adapters = { path = "../arcana-adapters" }
arcana-documents = { path = "../arcana-documents" }
arcana-recommender = { path = "../arcana-recommender" }
arcana-mcp = { path = "../arcana-mcp" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
