[package]
name = "arcana-mcp"
description = "MCP server exposing Arcana metadata tools to AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arcana-core = { path = "../arcana-core" }
arcana-adapters = { path = "../arcana-adapters" }
arcana-recommender = { path = "../arcana-recommender" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rmcp = { workspace = true }
axum = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
