[package]
name = "arcana-recommender"
description = "Context recommendation engine and semantic ranker for Arcana"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arcana-core = { path = "../arcana-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
